--- a/software-development.html
+++ b/software-development.html
@@ -26,10 +26,10 @@ layout: default
 <p class="small">*  This is a drupal marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.</p>
  
 
-
-Prior to the library:
+<br /><br />
+Prior to the library I worked on:
 <ul>
 <li>Perl / Postgresql - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today. This was done in about 2002, well before myspace started or other user content driven sites. If only I'd picked something with broader appeal than chainmail! :-)</li>
-<li>Coldfusion / Oracle, and some Java (while I worked for Discover Financial)</li>
+<li>Coldfusion / Oracle, PL/SQL and some Java (while I worked for Discover Financial)</li>
 <li>ETL Development, Data Mart/Data Warehousing with Ab Initio (also at Discover)</li>
 </ul>
