--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 </div>
 
 <h2>Full-Stack Developer</h2>
+
+
+<div style="width:350px;">
+<div class="bar-graph" style="width: 90%">Personas, storyboarding, scenarios</div>
+<div class="bar-graph" style="width: 100%">User Inquiry (via Interviews, Surveys, etc)</div>
+<div class="bar-graph" style="width: 90%">Comparative Research</div>
+<div class="bar-graph" style="width: 30%">Google Analytics</div>
+<div class="bar-graph" style="width: 90%">SEO Techniques</div>
+<div class="bar-graph" style="width: 60%">Information Architecture</div>
+<div class="bar-graph" style="width: 90%">Wireframes/Prototyping (Axure)</div>
+<div class="bar-graph" style="width: 60%">Mobile/Responsive Design</div>
+<div class="bar-graph" style="width: 60%">Usability testing (Morae)</div>
+<div class="bar-graph" style="width: 100%">Sketching ideas!</div>
+</div>
+
+
+
+
 I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001.
 
 <ul>
@@ -19,9 +37,3 @@ I've been in database/web development since getting my B.S. in Computer Technolo
 </ul>
 
 
-Prior to the library:
-<ul>
-<li>Perl / Postgresql - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today. This was done in about 2002, well before myspace started or other user content driven sites. If only I'd picked something with broader appeal than chainmail! :-)</li>
-<li>Coldfusion / Oracle, and some Java (while I worked for Discover Financial)</li>
-<li>ETL Development, Data Mart/Data Warehousing with Ab Initio (also at Discover)</li>
-</ul>
