--- a/index.html
+++ b/index.html
@@ -8,32 +8,36 @@ My name is Robin, and this is my portfolio site - developed with Jekyll goodness
 Have a look around, enjoy yourself, and let me know if you have any questions!
 </div>
 
-<h2>Full-Stack Developer</h2>
 
 
-<div style="width:350px;">
-<div class="bar-graph" style="width: 90%">Personas, storyboarding, scenarios</div>
-<div class="bar-graph" style="width: 100%">User Inquiry (via Interviews, Surveys, etc)</div>
-<div class="bar-graph" style="width: 90%">Comparative Research</div>
-<div class="bar-graph" style="width: 30%">Google Analytics</div>
-<div class="bar-graph" style="width: 90%">SEO Techniques</div>
-<div class="bar-graph" style="width: 60%">Information Architecture</div>
-<div class="bar-graph" style="width: 90%">Wireframes/Prototyping (Axure)</div>
-<div class="bar-graph" style="width: 60%">Mobile/Responsive Design</div>
-<div class="bar-graph" style="width: 60%">Usability testing (Morae)</div>
-<div class="bar-graph" style="width: 100%">Sketching ideas!</div>
+<div class="clearfix">
+  <div style="float:left;">
+    <h3>Full-Stack Developer</h3>
+    Education: B.S., Computer Technology from Purdue University, 2001<br />
+    Work Experience:  Seven years at Hesburgh Library, University of Notre Dame - Sr. Web and Reporting Developer and Sr. User Experience Analyst<br />
+    Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Cardmember Business Rules Database and ETL Developer for Marketing Campaigns<br />
+  
+    Technologies and Techniques I'm currently using:
+    <div class="bar-graph" style="width: 90%">Ruby on Rails</div> 2 years
+    <div class="bar-graph" style="width: 100%">PHP</div> 5 years
+    <div class="bar-graph" style="width: 90%">MySQL (incl. scripting and optimization)</div> 5 years
+    <div class="bar-graph" style="width: 30%">Javascript / jQuery / Ajax / Coffeescript</div> 10 years
+    <div class="bar-graph" style="width: 90%">CSS / SCSS</div>
+    <div class="bar-graph" style="width: 60%">jQuery Mobile and PhoneGap</div> <1 year
+    <div class="bar-graph" style="width: 60%">Data Modelling, advanced and big data/warehousing techniques</div>
+    <div class="bar-graph" style="width: 100%">ETL and Report Development</div>
+    <a href="software-development">view some of my software work</a>
+    
+  </div>
+  <div style="float: right;">
+    <h3>UX-er</h3>
+    Education: M.S., Human-Computer Interaction from DePaul University, expected graduation 2015<br />
+  </div>
 </div>
-
 
 
 
 I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001.
 
-<ul>
-<li>The standards: HTML / Javascript (pre-jQuery and with) / CoffeeScript / CSS / SCSS</li>
-<li>Ruby on Rails (~2 years) / PHP / MySQL</li>
-<li>Mobile site development using a combination of Rails, JQuery Mobile and iOS and Android apps via PhoneGap</li>
-<li>ETL and Report Development using JasperETL, Unix shell scripts and Perl for the custom built reporting front end against Oracle. This was later rewritten to MySQL for cost/maintainability reasons, and now I know all about <del>repairing</del> running MyISAM tables in a large data environment :-)</li>
-</ul>
 
 
