--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@ My name is Robin, and this is my portfolio site - developed with Jekyll goodness
 Have a look around, enjoy yourself, and let me know if you have any questions!
 </div>
 
-
-
+Work Experience:  Seven years at Hesburgh Library, University of Notre Dame - Sr. Web and Reporting Developer and Sr. User Experience Analyst<br />
+Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Cardmember Business Rules Database and ETL Developer for Marketing Campaigns<br />
+  
 <div class="clearfix">
   <div style="float:left;">
     <h3>Full-Stack Developer</h3>
-    Education: B.S., Computer Technology from Purdue University, 2001<br />
-    Work Experience:  Seven years at Hesburgh Library, University of Notre Dame - Sr. Web and Reporting Developer and Sr. User Experience Analyst<br />
-    Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Cardmember Business Rules Database and ETL Developer for Marketing Campaigns<br />
-  
-    Technologies and Techniques I'm currently using:
-    <div class="bar-graph" style="width: 90%">Ruby on Rails</div> 2 years
-    <div class="bar-graph" style="width: 100%">PHP</div> 5 years
-    <div class="bar-graph" style="width: 90%">MySQL (incl. scripting and optimization)</div> 5 years
-    <div class="bar-graph" style="width: 30%">Javascript / jQuery / Ajax / Coffeescript</div> 10 years
+    <b>Education:</b> B.S., Computer Technology from Purdue University, 2001<br />
+    
+    <br />Technologies and Techniques I'm currently using:
+    <div class="clearfix"><div class="bar-graph left" style="width: 20%">Ruby on Rails</div><div class="right"> 2 years</div>
+    <div class="bar-graph" style="width: 50%">PHP</div> 5 years
+    <div class="bar-graph" style="width: 50%">MySQL (incl. scripting and optimization)</div> 5 years
+    <div class="bar-graph" style="width: 100%">Javascript / jQuery / Ajax / Coffeescript</div> 10 years
     <div class="bar-graph" style="width: 90%">CSS / SCSS</div>
-    <div class="bar-graph" style="width: 60%">jQuery Mobile and PhoneGap</div> <1 year
-    <div class="bar-graph" style="width: 60%">Data Modelling, advanced and big data/warehousing techniques</div>
-    <div class="bar-graph" style="width: 100%">ETL and Report Development</div>
+    <div class="bar-graph" style="width: 10%">jQuery Mobile and PhoneGap</div> <1 year
+    <div class="bar-graph" style="width: 100%">Data Modelling, advanced and big data/warehousing techniques</div> 10 years
+    <div class="bar-graph" style="width: 50%">ETL and Report Development</div> 5 years
     <a href="software-development">view some of my software work</a>
     
   </div>
