--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Card
     <b>Education:</b> B.S., Computer Technology from Purdue University, 2001<br />
     
     <br />Technologies and Techniques I'm currently using:
-    <div class="clearfix"><div class="bar-graph left" style="width: 20%">Ruby on Rails</div><div class="right"> 2 years</div>
-    <div class="bar-graph" style="width: 50%">PHP</div> 5 years
-    <div class="bar-graph" style="width: 50%">MySQL (incl. scripting and optimization)</div> 5 years
-    <div class="bar-graph" style="width: 100%">Javascript / jQuery / Ajax / Coffeescript</div> 10 years
-    <div class="bar-graph" style="width: 90%">CSS / SCSS</div>
-    <div class="bar-graph" style="width: 10%">jQuery Mobile and PhoneGap</div> <1 year
-    <div class="bar-graph" style="width: 100%">Data Modelling, advanced and big data/warehousing techniques</div> 10 years
-    <div class="bar-graph" style="width: 50%">ETL and Report Development</div> 5 years
+    <div class="clearfix"><div class="bar-graph left" style="width: 20%">Ruby on Rails</div><div class="right"> 2 years</div></div>
+    <div class="clearfix"><div class="bar-graph left" style="width: 50%">PHP</div><div class="right"> 5 years</div></div>
+    <div class="clearfix"><div class="bar-graph left" style="width: 50%">MySQL (incl. scripting and optimization)</div><div class="right"> 5 years</div></div>
+    <div class="clearfix"><div class="bar-graph left" style="width: 100%">Javascript / jQuery / Ajax / Coffeescript</div><div class="right"> 10 years</div></div>
+    <div class="clearfix"><div class="bar-graph left" style="width: 30%">CSS / SCSS</div><div class="right"> 3 years</div></div>
+    <div class="clearfix"><div class="bar-graph left" style="width: 10%">jQuery Mobile and PhoneGap</div><div class="right"> <1 year</div></div>
+    <div class="clearfix"><div class="bar-graph left" style="width: 100%">Data Modelling, advanced and big data/warehousing techniques</div><div class="right"> 10 years</div></div>
+    <div class="clearfix"><div class="bar-graph left" style="width: 50%">ETL and Report Development</div><div class="right"> 5 years</div></div>
     <a href="software-development">view some of my software work</a>
     
   </div>
