--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Card
     <h3>Full-Stack Developer</h3>
     <b>Education:</b> B.S., Computer Technology from Purdue University, 2001<br />
     
-    <br />Technologies and Techniques I'm currently using:
-    Ruby on Rails <div class="bar-graph" style="width: 20%"> 2 years</div>
+    <br />Technologies and Techniques I'm currently using:<br />
+    Ruby on Rails <span class="bar-graph" style="width: 20%"> 2 years</span><br />
     <div class="clearfix"><div class="bar-graph left" style="width: 50%">PHP</div><div class="right"> 5 years</div></div>
     <div class="clearfix"><div class="bar-graph left" style="width: 50%">MySQL (incl. scripting and optimization)</div><div class="right"> 5 years</div></div>
     <div class="clearfix"><div class="bar-graph left" style="width: 100%">Javascript / jQuery / Ajax / Coffeescript</div><div class="right"> 10 years</div></div>
