--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Card
     <br />Technologies and Techniques I'm currently using:<br />
     <ul>
     <li class="clearfix"><span class="left">Ruby on Rails  </span><span class="bar-graph right" style="width: 20%"> 2 years</span></li>
-    <li class="clearfix"><div class="bar-graph left" style="width: 50%">PHP</div><div class="right"> 5 years</div></li>
+    <li class="clearfix"><span class="left">PHP  </span><span class="bar-graph right" style="width: 50%"> 5 years</span></li>
     </ul>
     
     <div class="clearfix"><div class="bar-graph left" style="width: 50%">MySQL (incl. scripting and optimization)</div><div class="right"> 5 years</div></div>
