--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <b>Education:</b> B.S., Computer Technology from Purdue University, 2001<br />
     
     <br />Technologies and Techniques I'm currently using:<br />
-    <ul>
-    <li class="clearfix"><span class="left">Ruby on Rails  </span><span class="bar-graph right" style="width: 20%"> 2 years</span></li>
-    <li class="clearfix"><span class="left">PHP  </span><span class="bar-graph right" style="width: 50%"> 5 years</span></li>
-    </ul>
+    <table>
+    <tr><td><span class="bar-graph" style="width: 20%"> 2 years</span></td><td>Ruby on Rails</td></tr>
+    <tr><td><span class="bar-graph" style="width: 50%"> 5 years</span></td><td>PHP</td></tr>
+    </table>
     
     <div class="clearfix"><div class="bar-graph left" style="width: 50%">MySQL (incl. scripting and optimization)</div><div class="right"> 5 years</div></div>
     <div class="clearfix"><div class="bar-graph left" style="width: 100%">Javascript / jQuery / Ajax / Coffeescript</div><div class="right"> 10 years</div></div>
