--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <b>Education:</b> B.S., Computer Technology from Purdue University, 2001<br />
     
     <br />Technologies and Techniques I'm currently using:<br />
-    <table>
+    <table style="width:100%">
     <tr><td><span class="bar-graph" style="width: 20%"> 2 years</span></td><td>Ruby on Rails</td></tr>
     <tr><td><span class="bar-graph" style="width: 50%"> 5 years</span></td><td>PHP</td></tr>
     </table>
