--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     
     <br />Technologies and Techniques I'm currently using:<br />
     <table style="width:100%">
-    <tr><td><span class="bar-graph" style="width: 20%"> 2 years</span></td><td>Ruby on Rails</td></tr>
-    <tr><td><span class="bar-graph" style="width: 50%"> 5 years</span></td><td>PHP</td></tr>
+    <tr><td><div class="bar-graph" style="width: 20%"> 2 years</div></td><td>Ruby on Rails</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%"> 5 years</div></td><td>PHP</td></tr>
     </table>
     
     <div class="clearfix"><div class="bar-graph left" style="width: 50%">MySQL (incl. scripting and optimization)</div><div class="right"> 5 years</div></div>
