--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <table class="bar-graph-table">
     <tr><td><div class="bar-graph" style="width: 20%"> 2 years</div></td><td>Ruby on Rails</td></tr>
     <tr><td><div class="bar-graph" style="width: 50%"> 5 years</div></td><td>PHP</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%"> 5 years</div></td><td>MySQL (incl. scripting and optimization)</td></tr>
+    <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Javascript / jQuery / Ajax / Coffeescript</td></tr>
     </table>
     
     <div class="clearfix"><div class="bar-graph left" style="width: 50%">MySQL (incl. scripting and optimization)</div><div class="right"> 5 years</div></div>
