--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
   </div>
   <div class="right">
     <h3>UX-er</h3>
-    Education: M.S., Human-Computer Interaction from DePaul University, expected graduation 2015<br />
+    <b>Education:</b> M.S., Human-Computer Interaction from DePaul University, expected graduation 2015
   </div>
 </div>
-
-
-
-I've been in database/web development since getting my B.S. in Computer Technology from Purdue in 2001.
-
-
 
