--- a/index.html
+++ b/index.html
@@ -32,9 +32,23 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <a href="software-development">view some of my software work</a>
     
   </div>
-  <div class="right">
+  <div class="left">
     <h3>UX-er</h3>
     <b>Education:</b> M.S., Human-Computer Interaction from DePaul University, expected graduation 2015
+  
+    <br />Technologies and Techniques I'm currently using:<br />
+    <table class="bar-graph-table">
+    <tr><td><div class="bar-graph" style="width: 50%"> 2 years</div></td><td>Ruby on Rails</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>PHP</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>MySQL (incl. scripting and optimization)</td></tr>
+    <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Javascript / jQuery / Ajax / Coffeescript</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>CSS / SCSS</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%"> 1 year</div></td><td>Mobile via jQuery Mobile and PhoneGap</td></tr>
+    <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Data Modelling, advanced and big data/warehousing techniques</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>ETL and Report Development</td></tr>
+    </table>
+    
+    <a href="ux-work">view some of my ux work</a>    
   </div>
 </div>
 
