--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 <p>Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Cardmember Business Rules Database and ETL Developer for Marketing Campaigns</p>
   
 <div class="clearfix">
-  <div class="left">
+  <div>
     <h3>Full-Stack Developer</h3>
     <b>Education:</b> B.S., Computer Technology from Purdue University, 2001<br />
     
