--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <a href="software-development">view some of my software work</a>
     
   </div>
-  <div class="left">
+  <div class="right">
     <h3>UX-er</h3>
     <b>Education:</b> M.S., Human-Computer Interaction from DePaul University, expected graduation 2015
   
