--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 <p>Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Cardmember Business Rules Database and ETL Developer for Marketing Campaigns</p>
   
 <div class="clearfix">
-  <div>
+  <div class="left" style="width:50%">
     <h3>Full-Stack Developer</h3>
     <b>Education:</b> B.S., Computer Technology from Purdue University, 2001<br />
     
@@ -32,7 +32,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <a href="software-development">view some of my software work</a>
     
   </div>
-  <div class="right">
+  <div class="right" style="width:50%">
     <h3>UX-er</h3>
     <b>Education:</b> M.S., Human-Computer Interaction from DePaul University, expected graduation 2015
   
