--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
 <div class="clearfix">
   <div class="left" style="width:50%">
     <h3>Full-Stack Developer</h3>
-    <b>Education:</b> B.S., Computer Technology from Purdue University, 2001<br />
+    <b>Education:</b> B.S. in Computer Technology, 2001<br />
+    Purdue University, West Lafayette, IN<br />
     
-    <br />Technologies and Techniques I'm currently using:<br />
+    <br />Technologies I'm currently using:<br />
     <table class="bar-graph-table">
     <tr><td><div class="bar-graph" style="width: 50%"> 2 years</div></td><td>Ruby on Rails</td></tr>
     <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>PHP</td></tr>
@@ -34,12 +35,13 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
   </div>
   <div class="right" style="width:50%">
     <h3>UX-er</h3>
-    <b>Education:</b> M.S., Human-Computer Interaction from DePaul University, expected graduation 2015
+    <b>Education:</b> M.S. in Human-Computer Interaction, expected graduation 2015<br />
+    DePaul University, Chicago, IL<br />
   
-    <br />Technologies and Techniques I'm currently using:<br />
+    <br />Techniques I use:<br />
     <table class="bar-graph-table">
     <tr><td><div class="bar-graph" style="width: 50%"> 2 years</div></td><td>Ruby on Rails</td></tr>
-    <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>PHP</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%"> 5 years</div></td><td>PHP</td></tr>
     <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>MySQL (incl. scripting and optimization)</td></tr>
     <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Javascript / jQuery / Ajax / Coffeescript</td></tr>
     <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>CSS / SCSS</td></tr>
