--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Javascript / jQuery / Ajax / Coffeescript</td></tr>
     <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>CSS / SCSS</td></tr>
     <tr><td><div class="bar-graph" style="width: 50%"> 1 year</div></td><td>Mobile via jQuery Mobile and PhoneGap</td></tr>
-    <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Data modelling, advanced and warehousing techniques</td></tr>
+    <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Data modelling, advanced and warehousing</td></tr>
     <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>ETL and Report Development</td></tr>
     </table>
     
