--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
   
     <br />Techniques I use:<br />
     <table class="bar-graph-table">
-    <tr><td><div class="bar-graph" style="width: 50%"> 2 years</div></td><td>Personas, storyboarding, scenarios</td></tr>
-    <tr><td><div class="bar-graph" style="width: 50%"> 5 years</div></td><td>User Inquiry (via Interviews, Surveys, etc)</td></tr>
-    <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>Comparative Research</td></tr>
-    <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Google Analytics</td></tr>
-    <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>Information Architecture</td></tr>
-    <tr><td><div class="bar-graph" style="width: 50%"> 1 year</div></td><td>Wireframes/Prototyping using Axure</td></tr>
-    <tr><td><div class="bar-graph" style="width: 100%"> 10 years</div></td><td>Mobile/Responsive Design</td></tr>
-    <tr><td><div class="bar-graph" style="width: 80%"> 5 years</div></td><td>Usability testing with Morae</td></tr>
+    <tr><td><div class="bar-graph" style="width: 100%"> </div></td><td>Personas, storyboarding, scenarios</td></tr>
+    <tr><td><div class="bar-graph" style="width: 100%"> </div></td><td>User Inquiry (via Interviews, Surveys, etc)</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%"> </div></td><td>Comparative Research</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%"> </div></td><td>Google Analytics</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%"> </div></td><td>Information Architecture</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%"> </div></td><td>Wireframes/Prototyping using Axure</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%"> </div></td><td>Mobile/Responsive Design</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%"> </div></td><td>Usability testing with Morae</td></tr>
     </table>
     
     <a href="ux-work">view some of my ux work</a>    
