--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <tr><td><div class="bar-graph" style="width: 100%">Experienced</div></td><td>Personas, storyboarding, scenarios</td></tr>
     <tr><td><div class="bar-graph" style="width: 100%">Experienced</div></td><td>User Inquiry (via Interviews, Surveys, etc)</td></tr>
     <tr><td><div class="bar-graph" style="width: 80%">Mid</div></td><td>Comparative Research</td></tr>
-    <tr><td><div class="bar-graph" style="width: 50%">Entry-Mid</div></td><td>Google Analytics</td></tr>
-    <tr><td><div class="bar-graph" style="width: 50%">Entry-Mid</div></td><td>Information Architecture</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%">Limited</div></td><td>Google Analytics</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%">Limited</div></td><td>Information Architecture</td></tr>
     <tr><td><div class="bar-graph" style="width: 80%">Mid</div></td><td>Wireframes/Prototyping using Axure</td></tr>
     <tr><td><div class="bar-graph" style="width: 80%">Mid</div></td><td>Mobile/Responsive Design</td></tr>
-    <tr><td><div class="bar-graph" style="width: 50%">Entry</div></td><td>Usability testing with Morae</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%">Limited</div></td><td>Usability testing with Morae</td></tr>
     </table>
     
     <a href="ux-work">view some of my ux work</a>    
