--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <b>Education:</b> DePaul University<br />
     M.S., Human-Computer Interaction, expected graduation 2015<br />
   
-    <br />Experience in and Techniques I use:<br />
+    <br />Techniques I use:<br />
     <table class="bar-graph-table">
-    <tr><td><div class="bar-graph" style="width: 100%">Experienced</div></td><td>Personas, storyboarding, scenarios</td></tr>
-    <tr><td><div class="bar-graph" style="width: 100%">Experienced</div></td><td>User Inquiry (via Interviews, Surveys, etc)</td></tr>
-    <tr><td><div class="bar-graph" style="width: 80%">Mid</div></td><td>Comparative Research</td></tr>
-    <tr><td><div class="bar-graph" style="width: 50%">Limited</div></td><td>Google Analytics</td></tr>
-    <tr><td><div class="bar-graph" style="width: 50%">Limited</div></td><td>Information Architecture</td></tr>
-    <tr><td><div class="bar-graph" style="width: 80%">Mid</div></td><td>Wireframes/Prototyping using Axure</td></tr>
-    <tr><td><div class="bar-graph" style="width: 80%">Mid</div></td><td>Mobile/Responsive Design</td></tr>
-    <tr><td><div class="bar-graph" style="width: 50%">Limited</div></td><td>Usability testing with Morae</td></tr>
+    <tr><td><div class="bar-graph" style="width: 100%">Advanced</div></td><td>Personas, storyboarding, scenarios</td></tr>
+    <tr><td><div class="bar-graph" style="width: 100%">Advanced</div></td><td>User Inquiry (via Interviews, Surveys, etc)</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%">Intermediate</div></td><td>Comparative Research</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%">Basic</div></td><td>Google Analytics</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%">Basic</div></td><td>Information Architecture</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%">Intermediate</div></td><td>Wireframes/Prototyping using Axure</td></tr>
+    <tr><td><div class="bar-graph" style="width: 80%">Intermediate</div></td><td>Mobile/Responsive Design</td></tr>
+    <tr><td><div class="bar-graph" style="width: 50%">Basic</div></td><td>Usability testing with Morae</td></tr>
     </table>
     
     <a href="ux-work">view some of my ux work</a>    
