--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions!
     <tr><td><div class="bar-graph" style="width: 50%">Basic</div></td><td>Usability testing with Morae</td></tr>
     </table>
     
-    <a href="ux-work">view some of my ux work</a>    
+    <a href="ux-work">view some of my UX work</a>    
   </div>
 </div>
 
