--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="clearfix">
-<img src="images/me.png" alt="Me" style="float:left;margin:0 10px 0 0;max-height:170px;" />
+<img src="images/me.png" alt="Me" class="site-avatar" />
 <h1>Hello there!</h1>
 My name is Robin, and this is my portfolio site - developed with Jekyll goodness.  
 Have a look around, enjoy yourself, and let me know if you have any questions!
