--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ layout: default
 <img src="images/me.png" alt="Me" class="site-avatar" />
 <h1>Hello there!</h1>
 My name is Robin, and this is my portfolio site - developed with Jekyll goodness.  
-Have a look around, enjoy yourself, and let me know if you have any questions!
+Have a look around, enjoy yourself, and let me know if you have any questions.
 </div>
 
-<h2>My work experience:</h2>  
+<h2>Work experience</h2>  
 <p>Seven years at Hesburgh Library, University of Notre Dame - Sr. Web and Reporting Developer and Sr. User Experience Analyst</p>
 <p>Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Cardmember Business Rules Database and ETL Developer for Marketing Campaigns</p>
   
