--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
     
   </div>
   <div class="left light-border" style="width:35%">
+    <div style="background:black; width:100%; height: 15px;">
     <h3>Full-Stack Developer</h3>
+    </div>
     <b>Education:</b> Purdue University<br />
     B.S. in Computer Technology, 2001<br />
     
