--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
           
     
   </div>
-  <div class="middle card">
+  <div class="middle left card">
     <div class="card-top">
       <h3>Full-Stack Developer</h3>
     </div>
