--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
 
 <div class="clearfix">
   <div class="left card">
-    <div class="card-top">
+    <div class="top">
       <h3>Work experience</h3>  
     </div>
     <div class="inside">
@@ -22,7 +22,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
     
   </div>
   <div class="middle card">
-    <div class="card-top">
+    <div class="top">
       <h3>Full-Stack Developer</h3>
     </div>
     <div class="inside">
@@ -45,7 +45,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
     </div>
   </div>
   <div class="right card">
-    <div class="card-top">
+    <div class="top">
       <h3>UX-er</h3>
     </div>
     <div class="inside">
