--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
       <h3>Work experience</h3>  
     </div>
     <div class="inside">
-      <p>Seven years at Hesburgh Library, University of Notre Dame - Sr. Web and Reporting Developer and Sr. User Experience Analyst</p>
-      <p>Six years at Discover Financial, Riverwoods, IL - Programmer/Analyst on the Cardmember Business Rules Database and ETL Developer for Marketing Campaigns</p>
+      <p>7 years, Hesburgh Library at University of Notre Dame <br />Sr. User Experience Analyst<br />Sr. Web and Reporting Developer <br /></p>
+      <p>6 years, Discover Financial, Riverwoods, IL <br />Programmer/Analyst on the Cardmember Business Rules Database <br />ETL Developer for Marketing Campaigns</p>
     </div>
     
   </div>
