--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
       <h3>Work experience</h3>  
     </div>
     <div class="inside">
-      <p>7 years, Hesburgh Library at University of Notre Dame <br />Sr. User Experience Analyst<br />Sr. Web and Reporting Developer <br /></p>
-      <p>6 years, Discover Financial, Riverwoods, IL <br />Programmer/Analyst on the Cardmember Business Rules Database <br />ETL Developer for Marketing Campaigns</p>
+      <p>2007 - Current, Hesburgh Library<br />University of Notre Dame <br />Sr. User Experience Analyst,<br />Sr. Web and Reporting Developer <br /></p>
+      <p>2001 - 2007, Discover Financial<br />Riverwoods, IL <br />Programmer/Analyst on the Cardmember Database <br />ETL Developer for Marketing</p>
     </div>
     
   </div>
