--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
       <h3>Work experience</h3>  
     </div>
     <div class="inside">
-      <p>2007 - Current, Hesburgh Library<br />University of Notre Dame <br />Sr. User Experience Analyst,<br />Sr. Web and Reporting Developer <br /></p>
+      <p><b>Sr. User Experience Analyst</b>,<br /><b>Sr. Web and Reporting Developer</b><br /> Hesburgh Library<br />University of Notre Dame <br />(2007 - Current)</p>
       <p>2001 - 2007, Discover Financial<br />Riverwoods, IL <br />Programmer/Analyst on the Cardmember Database <br />ETL Developer for Marketing</p>
     </div>
     
