--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
       <h3>Full-Stack Developer</h3>
     </div>
     <div class="inside">
-      <b>Education:</b> 2001, B.S., Computer Technology<br />Purdue University<br />
+      <b>Education:</b> 2001, B.S., Computer Technology, Purdue University<br />
       
       <br />Technologies I'm currently using:<br />
       <table class="bar-graph-table">
@@ -48,7 +48,7 @@ Have a look around, enjoy yourself, and let me know if you have any questions.
       <h3>UX-er</h3>
     </div>
     <div class="inside">
-      <b>Education:</b> (2015), M.S. Human-computer Interaction, <br />DePaul University<br />
+      <b>Education:</b> (2015), M.S., Human-computer Interaction, DePaul University<br />
     
       <br />Techniques I use:<br />
       <table class="bar-graph-table">
