--- a/software-development.html
+++ b/software-development.html
@@ -4,27 +4,35 @@ layout: default
 
 
 <h2>View my work</h2>
-<p><a href="https://github.com/robinschaaf">GitHub Profile</a></p>
-<p><a href="http://library.nd.edu/directory">Library Employee Directory</a></p>
+<p><h3>Library Employee Directory</h3></p>
 <p class="small">This is my most recent application developed last year, developed using Rails and various gems, using coffeescript and scss.  Unfortunately, it requires a log in to see the user-administration which allows employees to self-administer - including a markdown editor for their "About" section.</p>
 <div class="clearfix">
   <div class="section"><img src="images/emp_dir.png" style="float:left;" /></div>
   <div class="section"><img src="images/emp_dir2.png" style="float:right;" /></div>
 </div>
- 
+<p><a href="http://library.nd.edu/directory">view the directory</a></p> 
  <br />
-<p>Bibliographic Cataloging Statistics</p>
+<h3>Bibliographic Cataloging Statistics</h3>
 <br />
 <p class="small">*  This is an internal application, I'll have screenshots coming soon!</p>
 <br />
 <p><a href="http://m.library.nd.edu">Mobile Library</a></p> 
 <br />
-<p class="small">*  I also repackaged this as android and iOS apps using PhoneGap (the repository is available in github).  It, unfortunately, did not make it into the Apple Store.  They cited that it wasn't entertaining, which is true enough - since it's a library catalog.</p>
+<p class="small"></p>I also repackaged this as android and iOS apps using PhoneGap (the repository is available in github).  It, unfortunately, did not make it into the Apple Store.  They cited that it wasn't entertaining, which is true enough - since it's a library catalog.</p>
+<p><a href="http://m.library.nd.edu">view m.library.nd.edu</a></p>
 <br />
 <p><a href="http://erm.library.nd.edu">CORAL Electronic Resource Management System (ERMS)</a></p> 
 <br />
 <p class="small">*  This is a drupal marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.</p>
- 
+
+
+<h3>Library Centralized Reporting System</h3>
+<br />
+<p class="small">*  This is an internal application, I'll have screenshots coming soon!</p>
+<br />
+
+
+<p><a href="https://github.com/robinschaaf">My GitHub Profile</a></p>
 
 <br /><br />
 Prior to the library I worked on:
