--- a/software-development.html
+++ b/software-development.html
@@ -4,19 +4,19 @@ layout: default
 
 
 <h2>View my work</h2>
-<p><h3>Library Employee Directory</h3></p>
+<p><b>Library Employee Directory</b></p>
 <p class="small">This is my most recent application developed last year, developed using Rails and various gems, using coffeescript and scss.  Unfortunately, it requires a log in to see the user-administration which allows employees to self-administer - including a markdown editor for their "About" section.</p>
 <div class="clearfix">
-  <div class="section"><img src="images/emp_dir.png" style="float:left;" /></div>
-  <div class="section"><img src="images/emp_dir2.png" style="float:right;" /></div>
+  <div class="section"><img src="images/emp_dir.png" class="left" /></div>
+  <div class="section"><img src="images/emp_dir2.png" class="right" /></div>
 </div>
 <p><a href="http://library.nd.edu/directory">view the directory</a></p> 
- <br />
-<h3>Bibliographic Cataloging Statistics</h3>
+<br />
+<p><b>Bibliographic Cataloging Statistics</b></p>
 <br />
 <p class="small">*  This is an internal application, I'll have screenshots coming soon!</p>
 <br />
-<p><a href="http://m.library.nd.edu">Mobile Library</a></p> 
+<p><b>Mobile Library</b></p> 
 <br />
 <p class="small"></p>I also repackaged this as android and iOS apps using PhoneGap (the repository is available in github).  It, unfortunately, did not make it into the Apple Store.  They cited that it wasn't entertaining, which is true enough - since it's a library catalog.</p>
 <p><a href="http://m.library.nd.edu">view m.library.nd.edu</a></p>
@@ -24,20 +24,20 @@ layout: default
 <p><a href="http://erm.library.nd.edu">CORAL Electronic Resource Management System (ERMS)</a></p> 
 <br />
 <p class="small">*  This is a drupal marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.</p>
+<p><a href="http://erm.library.nd.edu">view the coral marketing site</a></p>
 
 
 <h3>Library Centralized Reporting System</h3>
 <br />
 <p class="small">*  This is an internal application, I'll have screenshots coming soon!</p>
 <br />
-
-
+<br />
 <p><a href="https://github.com/robinschaaf">My GitHub Profile</a></p>
 
 <br /><br />
 Prior to the library I worked on:
 <ul>
-<li>Perl / Postgresql - In my spare time I developed a user-content driven site, mailleartisans.org, which is still in use today. This was done in about 2002, well before myspace started or other user content driven sites. If only I'd picked something with broader appeal than chainmail! :-)</li>
+<li>Perl / Postgresql - In my spare time I developed a user-content driven site, <a href="http://mailleartisans.org">mailleartisans.org</a>, which is still in use today. This was done in about 2002, well before myspace started or other user content driven sites. If only I'd picked something with broader appeal than chainmail! :-)</li>
 <li>Coldfusion / Oracle, PL/SQL and some Java (while I worked for Discover Financial)</li>
 <li>ETL Development, Data Mart/Data Warehousing with Ab Initio (also at Discover)</li>
 </ul>
