--- a/software-development.html
+++ b/software-development.html
@@ -4,8 +4,8 @@ layout: default
 
 
 <h2>View my work</h2>
-<p><b>Library Employee Directory</b></p>
-<p>This is my most recent application developed last year, developed using Rails and various gems, using coffeescript and scss.  Unfortunately, it requires a log in to see the user-administration which allows employees to self-administer - including a markdown editor for their "About" section.  <a href="http://library.nd.edu/directory">view the directory</a></p>
+<h4>Library Employee Directory</h4>
+<p>This is my most recent application developed last year, developed using Rails and various gems, using coffeescript and scss.  Unfortunately, it requires a log in to see the user-administration which allows employees to self-administer - including a markdown editor for their "About" section.<br /><a href="http://library.nd.edu/directory">view the directory</a></p>
 <div class="clearfix">
   <div class="section"><img src="images/emp_dir.png" class="left" /></div>
   <div class="section"><img src="images/emp_dir2.png" class="right" /></div>
@@ -18,12 +18,12 @@ layout: default
 <br />
 <p><b>Mobile Library</b></p> 
 <br />
-<p>I also repackaged this as android and iOS apps using PhoneGap (the repository is available in github).  It, unfortunately, did not make it into the Apple Store.  They cited that it wasn't entertaining, which is true enough - since it's a library catalog.  <a href="http://m.library.nd.edu">view m.library.nd.edu</a></p>
+<p>I also repackaged this as android and iOS apps using PhoneGap (the repository is available in github).  It, unfortunately, did not make it into the Apple Store.  They cited that it wasn't entertaining, which is true enough - since it's a library catalog.<br /><a href="http://m.library.nd.edu">view m.library.nd.edu</a></p>
 <br />
 <br />
 <p>CORAL Electronic Resource Management System (ERMS)</p> 
 <br />
-<p>This is a drupal marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.  <a href="http://erm.library.nd.edu">view the coral marketing site</a></p>
+<p>This is a drupal marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.<br /><a href="http://erm.library.nd.edu">view the coral marketing site</a></p>
 <br />
 <br />
 
