--- a/software-development.html
+++ b/software-development.html
@@ -16,27 +16,22 @@ Of course, it was not done in a vaccuum, but I was lucky enough to have a cowork
 </div>
 <br />
 <br />
-<p><b>Bibliographic Cataloging Statistics</b></p>
+<h3>Bibliographic Cataloging Statistics</h3>
 <br />
 <p class="small">*  This is an internal application, I'll have screenshots coming soon!</p>
 <br />
-<p><b>Mobile Library</b></p> 
+<h3>Mobile Library</h3>
 <br />
 <p>I also repackaged this as android and iOS apps using PhoneGap (the repository is available in github).  It, unfortunately, did not make it into the Apple Store.  They cited that it wasn't entertaining, which is true enough - since it's a library catalog.<br /><a href="http://m.library.nd.edu">view m.library.nd.edu</a></p>
 <br />
 <br />
-<p>CORAL Electronic Resource Management System (ERMS)</p> 
-<br />
-<p>This is a drupal marketing site I developed to advertise the open-source ERMS project, called CORAL.  CORAL was the result of over two years of user-centered development work, presentations at conferences, and feedback and support from other institutions.  More than forty other confirmed institutions use CORAL, and there are now a handful of other sites who are regularly contributing to the code on GitHub.<br /><a href="http://erm.library.nd.edu">view the coral marketing site</a></p>
-<br />
-<br />
 
-<p><b>Library Centralized Reporting System</b></p>
+<h3>Library Centralized Reporting System</h3>
 <br />
 <p class="small">*  This is an internal application, I'll have screenshots coming soon!</p>
 <br />
 <br />
-<p><a href="https://github.com/robinschaaf">view my github profile</a></p>
+<p><a href="https://github.com/robinschaaf">View my GitHub profile</a></p>
 
 <br /><br />
 Prior to the library I worked on:
