--- a/software-development.html
+++ b/software-development.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-<h2>View my work</h2>
+<h2>View my software work</h2>
 <br />By far my biggest accomplishment is software that I created for the library that I was able to open source.  In addition to seeing our listserv grow to over 500, and see many other universities use this software, the most gratifying part is that while Notre Dame's priorities changed and I'm working in a different area, other universities have stepped up to support and make improvements to the software.  Over the years there have been published articles written by libraries using the software and it has independently organized user groups at some of the major library conferences.
 Of course, it was not done in a vaccuum, but I was lucky enough to have a coworker who understood how libraries work inside-and-out.  He had some great ideas, and I was able to turn them into a reality, through using (then unbeknownst to me) user centered design.  This project is also what made me fall in love with UX and compelled me to pursue my master's in Human-computer Interaction.  I believe that the coding and the software itself isn't anything extraordinary, and the user interface is why it's been so successful. (that, and possibly the flexible data model :-)
 <br />You can view the drupal marketing site I designed, my work, documentation and data models on <a href="http://erm.library.nd.edu">erm.library.nd.edu</a>.  The code is available on github at <a href="https://github.com/ndlibersa">github.com/ndlibersa</a>
