--- a/ux-work.html
+++ b/ux-work.html
@@ -3,20 +3,7 @@ layout: default
 permalink: /ux-work/
 ---
 
-<h2>UX Work, in bar graph form:</h2>
-<div style="width:350px;">
-  <div class="bar-graph" style="width: 90%">Personas, storyboarding, scenarios</div>
-  <div class="bar-graph" style="width: 100%">User Inquiry (via Interviews, Surveys, etc)</div>
-  <div class="bar-graph" style="width: 90%">Comparative Research</div>
-  <div class="bar-graph" style="width: 30%">Google Analytics</div>
-  <div class="bar-graph" style="width: 90%">SEO Techniques</div>
-  <div class="bar-graph" style="width: 60%">Information Architecture</div>
-  <div class="bar-graph" style="width: 90%">Wireframes/Prototyping (Axure)</div>
-  <div class="bar-graph" style="width: 60%">Mobile/Responsive Design</div>
-  <div class="bar-graph" style="width: 60%">Usability testing (Morae)</div>
-  <div class="bar-graph" style="width: 100%">Sketching ideas!</div>
-</div>
-
+<h2>View my UX work:</h2>
 
 
 <h3>Father Hesburgh Digital Archives</h3>
